# ym-lattice-numerics

./: .gitignore  CONSTANTS.md  HYPOTHESIS_FRONTIER.md  INTERFACES.md  Interfaces.lean  MATHLIB_AUDIT.md  MILESTONES.md  PUSH_REPORT.md  README.md  REPRODUCIBILITY.md  STATUS.json  pyproject.toml
.github/workflows/: ci.yml  heartbeat.yml
configs/: constants_smoke.yml  m0_su2_smoke.yml  mother_sync_snapshot.yml
data/processed/: artifact_manifest.json  constants_smoke_report.json  honesty_gap_2d.json  mother_sync_snapshot.json  verify_2602_0041_report.json  witten_2602_0032_diagnostics.json
data/processed/aqft_bridges/: gaussian_covariance_certificate.json  transfer_gap_certificate.json
data/raw/: m0_su2_smoke.csv  m0_su2_smoke.json
docs/: DATASETS.md  LEAN_YM_FLOW_COORDINATION.md  MILESTONES.md  MOTHER_DIGEST.md  REFERENCES.md  STATUS.md
scripts/: check_constants.py  honesty_gap_2d.py  mother_sync_snapshot.py  regenerate_all.py  verify_2602_0041.py  witten_2602_0032_diagnostics.py
scripts/aqft_bridges/: gaussian_covariance_oracle.py  transfer_gap_oracle.py
src/ym_lattice_numerics/: __init__.py  analysis.py  constants.py  exact2d.py  intervals.py  lattice.py  mc.py  observables.py  su2.py
tests/: test_analysis.py  test_aqft_bridge_certificates.py  test_artifact_manifest.py  test_exact2d.py  test_honesty_gap.py  test_intervals.py  test_lattice.py  test_mc.py  test_mc_vs_exact2d.py  test_mother_digest_contract.py  test_mother_sync_snapshot.py  test_su2.py  test_verify_2602_0041.py  test_witten_2602_0032_diagnostics.py
